# msg

./: .example.env  .gitignore  Cargo.toml  Dockerfile.dev  docker-compose.yml
migrations/2026-01-02-140000_create_roles/: up.sql
migrations/2026-01-02-140100_create_auth_users/: up.sql
migrations/2026-01-02-140200_create_chats/: up.sql
migrations/2026-01-02-140300_create_chat_members/: up.sql
migrations/2026-01-02-140400_create_messages/: up.sql
src/: bootstrap.rs  config.rs  lib.rs  main.rs  repository.rs  schema.rs  usecase.rs
src/api/http/: mod.rs  openapi.rs  router.rs  server.rs  state.rs
src/api/http/dto/: auth.rs  chat.rs  common.rs  mod.rs
src/api/http/handlers/: auth.rs  chat.rs  health.rs  mod.rs
src/api/http/middleware/: auth.rs  mod.rs
src/bootstrap/: app.rs  logger.rs  postgres.rs  telemetry.rs
src/config/: grpc.rs  http.rs  jwt.rs  logger.rs  postgres.rs  root.rs  telemetry.rs
src/repository/: auth.rs  factory.rs  root.rs  user.rs
src/repository/auth/: models.rs  repo.rs
src/repository/chat/: mod.rs  models.rs  repo.rs
src/usecase/: auth.rs  factory.rs  root.rs
src/usecase/auth/: error.rs  jwt.rs  service.rs
src/usecase/chat/: error.rs  mod.rs  service.rs
